# databricks-mlops

./: API_REFERENCE.md  ARCHITECTURE.md  README.md  USAGE_GUIDE.md  pyproject.toml
databricks_mlops/: __init__.py
databricks_mlops/config/: __init__.py  config_manager.py
databricks_mlops/core/: __init__.py  orchestrator.py  pipeline.py
databricks_mlops/models/: __init__.py  base.py  config.py
databricks_mlops/monitoring/: __init__.py  drift_detector.py  metric_collector.py
databricks_mlops/pipelines/: __init__.py  feature_engineering.py  model_deployment.py  model_training.py
databricks_mlops/utils/: __init__.py  data_validation.py  databricks_client.py  expression_evaluator.py  logging.py  model_serving.py
databricks_mlops/workflows/: __init__.py  mlflow_tracking.py
docs/: ACCESS_BUNDLES.md  AUTOMATION.md  DEPLOYMENT.md  MODEL_SERVING.md  MONITORING.md
examples/: complete_mlops_pipeline.py  customer_churn_prediction.py  data_config.yaml  deployment_config.yaml  expression_validation_example.py  feature_config.yaml  integrated_serving_example.py  integration_test.py  model_config.yaml  model_monitoring_example.py  model_serving_example.py  test_feature_transformer.py
