[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "databricks-mlops"
version = "0.1.0"
description = "A comprehensive framework for MLOps on Databricks"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# Core dependencies required for basic functionality
dependencies = [
    "pydantic>=2.5.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",
    "logging-config>=1.1.0",
]

[project.optional-dependencies]
# MLOps pipeline components
data = [
    "great-expectations>=0.18.0",
]
feature-engineering = [
    "scikit-learn>=1.3.0",
    "category-encoders>=2.6.0",
]
model-training = [
    "mlflow>=2.9.0",
    "optuna>=3.3.0",
]
drift-detection = [
    "scipy>=1.11.0",
    "statsmodels>=0.14.0",
]

# Integration components
databricks = [
    "delta-spark>=2.4.0",
    "pyspark>=3.4.0",
    "databricks-sdk>=0.20.0",
]

# API and service components
api = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "httpx>=0.25.0",
]

# Monitoring and deployment
monitoring = [
    "prometheus-client>=0.17.0",
    "grafana-api>=1.0.0",
]
deployment = [
    "databricks-cli>=0.18.0",
    "azure-identity>=1.14.0; platform_system!='Darwin'",
    "azure-keyvault-secrets>=4.7.0; platform_system!='Darwin'",
]

# Testing and development
dev = [
    "black>=23.10.0",
    "isort>=5.12.0",
    "mypy>=1.6.1",
    "ruff>=0.1.4",
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pre-commit>=3.5.0",
]
test = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
]

# Combined extras
ml = [
    "feature-engineering",
    "model-training",
    "drift-detection",
]
production = [
    "monitoring", 
    "deployment",
    "databricks",
    "api",
]

# All extras
all = [
    "data",
    "feature-engineering",
    "model-training",
    "drift-detection",
    "databricks",
    "api",
    "monitoring",
    "deployment",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/databricks-mlops"
"Bug Tracker" = "https://github.com/yourusername/databricks-mlops/issues"

[tool.hatch.build.targets.wheel]
packages = ["databricks_mlops"]

[tool.uv]
repository = "https://pypi.org/simple"
export = ["requirements.txt", "requirements-dev.txt"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff]
line-length = 88
target-version = "py39"
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
